<resources>
    <string name="app_name">CARONZ</string>

    <string name="access_token">AIzaSyCnCBo4qiU3PuiLNvNstl8GadA4-E__NqA</string>
    <string name="Admob_app_id">Enter the admob app id here </string>


    <string name="player_error">Error initializing YouTube player: %s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="_0">0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_fullscreen_view">activity_fullscreen_view</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dummy_button">Dummy Button</string>

    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mainSection">mainSection</string>
    <string name="generalSection">generalSection</string>


    <string name="appShare">appShare</string>
    <string name="appRating">appRating</string>
    <string name="aboutSection">aboutSection</string>
    <string name="aboutPreference">about</string>

    <string name="versionPreference">versionPreference</string>
    <string name="feedbackPrefrence">key_send_feedback</string>
    <string name="faqPreference">faqPreference</string>
    <string name="p_policyPreference">p_policyPreference</string>
    <string name="termsPreference">termsPreference</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>

    <string name="default_notification_channel_id">123</string>


    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="featured_list" />
    <string name="signin">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Log in</string>
    <string name="explore">Find</string>
    <string name="have_not_account">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="welcome">Hello Again!</string>
    <string name="have_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="source_location">Your location</string>
    <string name="where_to_go">Where are you going to?</string>
    <string name="pin_location">Set pin location</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string-array name="year_array">
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>

    </string-array>
    <string-array name="month_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="odometer_array">
        <item>Mi</item>
        <item>Km</item>
    </string-array>

    <string-array name="currency_array">
        <item>$</item>
        <item>€</item>
        <item>£</item>
        <item>¥</item>
        <item>₩</item>
        <item>₹</item>
        <item>₱</item>
        <item>₦</item>
        <item>R$</item>
    </string-array>

    <string-array name="car_type_array">
        <item>Sedan</item>
        <item>Truck</item>
        <item>Coupe</item>
        <item>Limo</item>
        <item>Others</item>
    </string-array>

</resources>
