<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auth_background_color"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:gravity="right"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_rounded_white_backgournd"
        android:layout_marginTop="30dp"
        android:layout_gravity="bottom"
        >

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/login_layout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="7dp"
                            android:layout_marginTop="0dp"
                            android:textColor="@color/colorAccent"
                            android:text="@string/welcome"
                            android:textStyle="bold"
                            android:textSize="20dp" />
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginTop="0dp"
                            android:textColor="@color/gray"
                            android:text="Welcome back you've seen missed"
                            android:textSize="16dp" />
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="7dp"
                            android:layout_marginTop="0dp"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/signin"
                            android:textStyle="bold"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/login_emailid"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/rounded_corners_edittext_dark"
                            android:drawableStart="@drawable/ic_mail_outline"
                            android:drawablePadding="8dp"
                            android:gravity="center_vertical"
                            android:hint="Enter email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/login_password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/rounded_corners_edittext_dark"
                            android:drawableStart="@drawable/ic_lock_outline"
                            android:drawablePadding="8dp"
                            android:gravity="center_vertical"
                            android:hint="Enter password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="right"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp">

                            <TextView
                                android:id="@+id/forgot_password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="left"
                                android:padding="5dp"
                                android:text="@string/forgot_password"
                                android:textColor="@color/gray700"
                                android:textSize="14sp"
                                android:visibility="visible" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/loginBtn"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginHorizontal="20dp"
                            android:background="@drawable/rounded_fill_primary_button"
                            android:text="@string/login"
                            android:textColor="@color/white" />
                        <Button
                            android:id="@+id/startExplore"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginHorizontal="20dp"
                            android:backgroundTint="@color/colorAccent"
                            android:visibility="gone"
                            android:text="@string/explore"
                            android:textColor="@color/white" />
                        <Button
                            android:id="@+id/fbLogin"
                            android:visibility="gone"
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="0dp"
                            android:text="Facebook"
                            android:textColor="@color/white"
                            android:layout_marginHorizontal="20dp"
                            />
                        <com.google.android.gms.common.SignInButton
                            android:id="@+id/gmailLogin"
                            android:visibility="gone"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/have_not_account"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/createAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:layout_marginLeft="10dp"
                            android:text="@string/signup"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18dp" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
    </LinearLayout>



</LinearLayout>